--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "pinkglock128.png"
+    "default_icon": "data/pinkglock128.png"
   },
   "icons": {
-    "128": "pinkglock128.png",
-    "64": "pinkglock64.png"
+    "128": "data/pinkglock128.png",
+    "64": "data/pinkglock64.png"
   },
   "permissions": ["activeTab"]
 }
